feat: Implement comprehensive PWA functionality
- Configure Workbox service worker with precaching and runtime caching
- Add enhanced PWA manifest with proper metadata and icons
- Implement offline/online status detection and indicators
- Create install prompt for PWA installation
- Add update notification system for app updates
- Set up background sync capabilities for offline actions
- Configure push notification support (foundation)
- Add comprehensive PWA meta tags for mobile optimization
- Create PWA hooks for state management
- Implement proper TypeScript support for service workers

PWA Features:
- Installable on mobile and desktop
- Offline functionality with cache strategies
- Automatic updates with user notifications
- Native app-like experience
- Optimized for mobile devices
- Background sync for offline actions
- Service worker caching for performance

Build successful and PWA-ready for deployment

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ REACT_APP_API_BASE_URL=http://localhost:3000
 # Development settings
 REACT_APP_ENV=development
 
-# PWA settings (will be added later)
+# PWA settings
 GENERATE_SOURCEMAP=false
+REACT_APP_PWA_ENABLED=true
+
+# Service Worker
+PUBLIC_URL=/
