feat: Implement comprehensive ISBN scanner with camera and manual input
- Add ZXing barcode scanning library for camera-based ISBN detection
- Create useISBNScanner hook with camera permissions and device management
- Implement ISBNScanner component with real-time camera preview
- Add ManualISBNInput component for manual ISBN entry as fallback
- Create ScannerModal that combines both scanning methods
- Implement full ISBN-10 and ISBN-13 validation algorithms
- Add responsive scanning interface with visual feedback
- Support camera switching for devices with multiple cameras
- Include scanning animations and status indicators
- Add proper error handling and permission requests

Key Features:
- Real-time barcode scanning with camera preview
- Automatic ISBN validation (both ISBN-10 and ISBN-13)
- Fallback to manual input when camera unavailable
- Multi-camera support with device switching
- Mobile-optimized scanning interface
- Comprehensive error handling and user feedback
- TypeScript support throughout
- Integration with existing theming system

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,7 @@ REACT_APP_PWA_ENABLED=true
 
 # Service Worker
 PUBLIC_URL=/
+
+# Scanner settings
+REACT_APP_ENABLE_CAMERA_SCANNER=true
+REACT_APP_SCANNER_DEBUG=false
