Update frontend to use AWS Cognito authentication
- Replaced custom JWT authentication with AWS Amplify/Cognito integration
- Updated AuthContext to use Amplify Auth methods (signIn, signUp, signOut)
- Modified LoginForm and RegisterForm to use Cognito authentication
- Updated API service to remove custom auth endpoints
- Added Cognito configuration with environment variables
- Updated password requirements to match Cognito defaults (8+ chars, mixed case, numbers)
- Removed dependency on custom backend auth routes
- Authentication now properly integrates with existing Cognito infrastructure
- Build succeeds with AWS Amplify v6 integration

Configuration required:
- REACT_APP_COGNITO_USER_POOL_ID
- REACT_APP_COGNITO_USER_POOL_CLIENT_ID
- REACT_APP_COGNITO_IDENTITY_POOL_ID

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 # API Configuration
 REACT_APP_API_BASE_URL=http://localhost:3000
 
+# AWS Cognito Configuration
+REACT_APP_COGNITO_USER_POOL_ID=us-east-1_XXXXXXXXX
+REACT_APP_COGNITO_USER_POOL_CLIENT_ID=your-client-id-here
+REACT_APP_COGNITO_IDENTITY_POOL_ID=us-east-1:xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+
 # Development settings
 REACT_APP_ENV=development
 
