--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/auth": "^6.15.0",
     "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.7.0",
@@ -15,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@zxing/browser": "^0.1.5",
     "@zxing/library": "^0.21.3",
+    "aws-amplify": "^6.15.5",
     "axios": "^1.11.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
